--- a/styles/global.css
+++ b/styles/global.css
@@ -60,15 +60,26 @@ h5 {
   }
 
   .input {
-    @apply py-3 px-4 border-2 rounded-xl outline-none focus:border-brand-600 focus:text-gray-800 w-full;
+    @apply py-3 px-4 border-2 rounded-xl outline-none focus:border-brand-600 focus:text-gray-700 w-full;
+  }
+
+  .input-ghost {
+    @apply pb-3 px-0 border-b-2  border-transparent hover:border-gray-100 outline-none focus:text-gray-700 focus:border-brand-600 w-full transition-all;
   }
 
   .input-error {
     @apply border-red-400 ring-4 ring-red-100;
   }
+  .modal-form label {
+    @apply block relative;
+  }
+
+  .modal-form label > div {
+    @apply uppercase text-xx tracking-widest font-medium text-gray-300 mb-2;
+  }
 
   .button {
-    @apply py-3 px-4 rounded-xl outline-none flex items-center justify-center space-x-2 border bg-gray-100 border-gray-100 hover:bg-gray-200 shadow transition-colors focus:ring-4 focus:ring-brand-400;
+    @apply py-3 px-4 rounded-xl outline-none flex items-center justify-center space-x-2 bg-gray-100 hover:bg-gray-200 hover:bg-opacity-50  shadow transition-colors focus:ring-4 focus:ring-brand-400;
   }
 
   .button-small {
@@ -80,7 +91,7 @@ h5 {
   }
 
   .button-text {
-    @apply shadow-none border bg-transparent p-0 hover:bg-transparent focus:bg-transparent hover:text-gray-700;
+    @apply shadow-none bg-transparent p-0 hover:bg-transparent focus:bg-transparent hover:text-gray-700;
   }
 
   /* .button svg {
@@ -126,6 +137,25 @@ h5 {
 }
 .accomplished-bg {
   @apply bg-accomplished-500 text-accomplished-100 transition-all;
+}
+
+.idea-bg-light {
+  @apply bg-idea-100 text-idea-600 transition-all;
+}
+.do-bg-light {
+  @apply bg-do-100 text-do-600 transition-all;
+}
+.doing-bg-light {
+  @apply bg-doing-100 text-doing-600 transition-all;
+}
+.review-bg-light {
+  @apply bg-review-100 text-review-600 transition-all;
+}
+.done-bg-light {
+  @apply bg-done-100 text-done-600 transition-all;
+}
+.accomplished-bg-light {
+  @apply bg-accomplished-100 text-accomplished-600 transition-all;
 }
 
 .hover-idea-bg {
@@ -191,26 +221,26 @@ h5 {
   box-shadow: 0 4px 10px theme("colors.accomplished.300");
 }
 
-.copy-bg {
-  @apply bg-copy-100 text-copy-600;
-}
-.shooting-bg {
-  @apply bg-shooting-100 text-shooting-600;
-}
 .post-bg {
-  @apply bg-post-100 text-post-600;
-}
-.reels-bg {
-  @apply bg-reels-100 text-reels-600;
-}
-.meeting-bg {
-  @apply bg-meeting-100 text-meeting-600;
+  @apply bg-post-100 text-post-600 transition-all;
 }
 .stories-bg {
-  @apply bg-stories-100 text-stories-600;
+  @apply bg-stories-100 text-stories-600 transition-all;
+}
+.reels-bg {
+  @apply bg-reels-100 text-reels-600 transition-all;
+}
+.meeting-bg {
+  @apply bg-meeting-100 text-meeting-600 transition-all;
+}
+.copy-bg {
+  @apply bg-copy-100 text-copy-600 transition-all;
 }
 .video-bg {
-  @apply bg-video-100 text-video-600;
+  @apply bg-video-100 text-video-600 transition-all;
+}
+.shooting-bg {
+  @apply bg-shooting-100 text-shooting-600 transition-all;
 }
 
 .instagram-grid .cell {
