--- a/styles/global.css
+++ b/styles/global.css
@@ -105,7 +105,7 @@ h5 {
   }
 
   .button-red {
-    @apply hover:bg-red-200 hover:text-red-600;
+    @apply hover:bg-red-500 hover:text-red-100;
   }
 
   .status-demo {
@@ -241,6 +241,9 @@ h5 {
 }
 .shooting-bg {
   @apply bg-shooting-100 text-shooting-600 transition-all;
+}
+.press-bg {
+  @apply bg-press-100 text-blue-600 transition-all;
 }
 
 .instagram-grid .cell {
