--- a/styles/global.css
+++ b/styles/global.css
@@ -41,9 +41,9 @@ h5 {
   }
 
   .loader .circle {
-    @apply h-12 w-12 rounded-full border-4 border-black border-opacity-10 absolute animate-spin;
-    border-top-color: theme("colors.brand.600");
-    /* animation-timing-function: ease-in-out; */
+    @apply h-12 w-12 rounded-full border-4 border-brand-600  absolute animate-spin;
+    border-top-color: transparent;
+    animation-timing-function: ease-in-out;
   }
 
   .loader.loader-small {
@@ -51,8 +51,8 @@ h5 {
   }
 
   .loader.loader-small .circle {
-    @apply h-6 w-6 border-2;
-    animation-duration: 0.8;
+    @apply h-6 w-6 border-[3px];
+    animation-duration: 0.8s;
   }
 
   .loader .circle:last-child {
@@ -121,41 +121,41 @@ h5 {
 }
 
 .idea-bg {
-  @apply bg-idea-500 text-idea-100 transition-all;
+  @apply bg-idea-500 text-idea-100 transition-all duration-300;
 }
 .do-bg {
-  @apply bg-do-400 text-do-100 transition-all;
+  @apply bg-do-400 text-do-100 transition-all duration-300;
 }
 .doing-bg {
-  @apply bg-doing-600 text-doing-100 transition-all;
+  @apply bg-doing-600 text-doing-100 transition-all duration-300;
 }
 .review-bg {
-  @apply bg-review-500 text-review-100 transition-all;
+  @apply bg-review-500 text-review-100 transition-all duration-300;
 }
 .done-bg {
-  @apply bg-done-400 text-done-100 transition-all;
+  @apply bg-done-400 text-done-100 transition-all duration-300;
 }
 .accomplished-bg {
-  @apply bg-accomplished-500 text-accomplished-100 transition-all;
+  @apply bg-accomplished-500 text-accomplished-100 transition-all duration-300;
 }
 
 .idea-bg-light {
-  @apply bg-idea-100 text-idea-600 transition-all;
+  @apply bg-idea-100 text-idea-600 transition-all duration-300;
 }
 .do-bg-light {
-  @apply bg-do-100 text-do-600 transition-all;
+  @apply bg-do-100 text-do-600 transition-all duration-300;
 }
 .doing-bg-light {
-  @apply bg-doing-100 text-doing-600 transition-all;
+  @apply bg-doing-100 text-doing-600 transition-all duration-300;
 }
 .review-bg-light {
-  @apply bg-review-100 text-review-600 transition-all;
+  @apply bg-review-100 text-review-600 transition-all duration-300;
 }
 .done-bg-light {
-  @apply bg-done-100 text-done-600 transition-all;
+  @apply bg-done-100 text-done-600 transition-all duration-300;
 }
 .accomplished-bg-light {
-  @apply bg-accomplished-100 text-accomplished-600 transition-all;
+  @apply bg-accomplished-100 text-accomplished-600 transition-all duration-300;
 }
 
 .hover-idea-bg {
@@ -244,6 +244,14 @@ h5 {
 }
 .press-bg {
   @apply bg-press-100 text-blue-600 transition-all;
+}
+
+.add-button {
+  @apply transition-all opacity-0 translate-x-2 duration-500;
+}
+
+.cell:hover .add-button {
+  @apply opacity-100 visible translate-x-0;
 }
 
 .instagram-grid .cell {
