--- a/styles/global.css
+++ b/styles/global.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 body {
-  @apply text-neutral-4 font-light font-brand;
+  @apply text-neutral-4 font-light;
   /* Set values for OpenType feature tags */
-  font-feature-settings: "ss01";
+  /* font-feature-settings: "ss01"; */
 }
 
 p {
