--- a/styles/global.css
+++ b/styles/global.css
@@ -317,6 +317,6 @@ h5 {
 	@apply border-r-0;
 }
 
-.instagram-grid .cell.border-b-0 {
+.instagram-grid .cell.border-bottom-0 {
 	@apply border-b-0;
 }
