--- a/styles/global.css
+++ b/styles/global.css
@@ -79,7 +79,7 @@ h5 {
 	}
 
 	.button {
-		@apply flex items-center justify-center px-4 py-3 space-x-2 transition-colors shadow outline-none rounded-xl bg-neutral-1 hover:bg-neutral-2 hover:bg-opacity-50 focus:ring-4 focus:ring-brand-400;
+		@apply flex items-center justify-center px-4 py-3 space-x-2 transition-colors shadow-xl outline-none rounded-xl bg-neutral-1 hover:bg-neutral-2 hover:bg-opacity-50 focus:ring-4 focus:ring-brand-400 dark:text-neutral-2 dark:hover:bg-neutral-5;
 	}
 
 	.button-small {
@@ -99,9 +99,7 @@ h5 {
   } */
 
 	.button-primary {
-		@apply text-white bg-brand-600 border-brand-600 hover:bg-brand-500 hover:text-white focus:bg-brand-500 focus:ring-brand-200 focus:text-white;
-		box-shadow: 0 1px 3px 0 theme("colors.brand.300"),
-			0 1px 2px 0 theme("colors.brand.300");
+		@apply text-white bg-brand-600 border-brand-600 hover:bg-brand-500 hover:text-white focus:bg-brand-500 focus:ring-brand-200 focus:text-white shadow-brand-500/30;
 	}
 
 	.button-red {
